--- a/BookBabies_Embeddings1.ipynb
+++ b/BookBabies_Embeddings1.ipynb
@@ -71,9 +71,7 @@
   {
    "cell_type": "markdown",
    "id": "fe3cff2d-1368-4833-a365-71787491aded",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Generate embeddings for large text using the BGE-M3 model from huggingface"
    ]
@@ -2097,7 +2095,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 580,
+   "execution_count": 660,
+   "id": "f6b0feb8-f9c9-4b8d-aba8-ec24c7b77129",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' A five-year old Cro-Magnon girl is orphaned and left homeless by an earthquake that destroys her family\\'s camp. She wanders aimlessly, naked and unable to feed herself, for several days. Having been attacked and nearly killed by a cave lion and suffering from starvation, exhaustion, and infection of her wounds, she collapses, on the verge of death. The narrative switches to a group of Neanderthal people, the \"Clan\", whose cave was destroyed in the earthquake and who are searching for a new home. The medicine woman of the group, Iza, discovers the girl and asks permission from Brun, the head of the Clan, to help the ailing child, despite the child being clearly a member of \"the Others\", the distrusted antagonists of the Clan. The child is adopted by Iza and her brother Creb. Creb is this group\\'s \"Mog-ur\" or shaman, despite being deformed as a result of the difficult birth resulting from his abnormally large head and the later loss of an arm and leg after being attacked by a cave bear. The clan call her Ayla, because they can\\'t pronounce her name. Immediately after Iza begins to help her, the clan discovers a huge, beautiful cave; many of the people begin to regard Ayla as lucky, especially since good fortune continues to come their way as she lives among them. In Auel\\'s books, the Neanderthal possess only limited vocal apparatus and rarely speak, but have a highly-developed sign language. They do not laugh or even smile, and they do not cry; when Ayla weeps, Iza thinks she has an eye disease. Ayla\\'s different thought processes lead her to break important Clan customs, particularly the taboo against females handling weapons. She is self-willed and spirited, but tries hard to fit in with the Neanderthals, although she has to learn everything first-hand; she does not possess the ancestral memories of the Clan which enable them to do certain tasks after being shown only once. Her main antagonist is Broud, son of the leader, an egomaniac who feels that she takes credit and attention away from him. As the two mature, the hatred between them festers. When they are young adults, Broud rapes Ayla, but she becomes pregnant, and rejoices in the birth of a son. The book ends with Creb\\'s death, Broud\\'s succession to the leadership, and his banishment of Ayla, who sets off to find other people of her own kind. She is not allowed to take her son with her. The separation haunts her with guilt and grief for the rest of the series.'"
+      ]
+     },
+     "execution_count": 660,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_raw[df_raw.BookTitle == 'The Clan of the Cave Bear']['Summary'].loc[892]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 654,
    "id": "84f510e3-27a7-411a-a611-3b731c9ab27f",
    "metadata": {},
    "outputs": [
@@ -2126,69 +2145,148 @@
        "      <th>Author</th>\n",
        "      <th>genre_list</th>\n",
        "      <th>cosine_similarity</th>\n",
+       "      <th>year_published</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3103</th>\n",
-       "      <td>The Fellowship of the Ring</td>\n",
-       "      <td>J. R. R. Tolkien</td>\n",
-       "      <td>['Fantasy', 'Autobiography', 'Biography', 'Ref...</td>\n",
-       "      <td>0.639165</td>\n",
+       "      <th>750</th>\n",
+       "      <td>The Lathe of Heaven</td>\n",
+       "      <td>Ursula K. Le Guin</td>\n",
+       "      <td>['Science Fiction', 'Speculative fiction', 'Fa...</td>\n",
+       "      <td>0.635565</td>\n",
+       "      <td>1995.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>A Midsummer Night's Dream</td>\n",
-       "      <td>William Shakespeare</td>\n",
-       "      <td>['Fantasy', 'Comedy']</td>\n",
-       "      <td>0.637184</td>\n",
+       "      <th>2275</th>\n",
+       "      <td>Ghost Story</td>\n",
+       "      <td>Peter Straub</td>\n",
+       "      <td>['Speculative fiction', 'Horror', 'Fiction']</td>\n",
+       "      <td>0.628392</td>\n",
+       "      <td>1979.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1939</th>\n",
-       "      <td>The Winter King</td>\n",
-       "      <td>Bernard Cornwell</td>\n",
-       "      <td>['Speculative fiction', 'Fantasy', 'Fiction', ...</td>\n",
-       "      <td>0.634384</td>\n",
+       "      <th>134</th>\n",
+       "      <td>Childhood's End</td>\n",
+       "      <td>Arthur C. Clarke</td>\n",
+       "      <td>['Science Fiction', 'Speculative fiction', 'Ca...</td>\n",
+       "      <td>0.626155</td>\n",
+       "      <td>1987.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>183</th>\n",
-       "      <td>The Winter's Tale</td>\n",
-       "      <td>William Shakespeare</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>0.632213</td>\n",
+       "      <th>21</th>\n",
+       "      <td>Microserfs</td>\n",
+       "      <td>Douglas Coupland</td>\n",
+       "      <td>['Epistolary novel', 'Fiction']</td>\n",
+       "      <td>0.621337</td>\n",
+       "      <td>1995.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>The Forge of God</td>\n",
+       "      <td>Greg Bear</td>\n",
+       "      <td>['Science Fiction', 'Speculative fiction', 'Fi...</td>\n",
+       "      <td>0.619180</td>\n",
+       "      <td>1993.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>304</th>\n",
+       "      <td>The Restaurant at the End of the Universe</td>\n",
+       "      <td>Douglas Adams</td>\n",
+       "      <td>['Science Fiction', 'Speculative fiction', 'Fi...</td>\n",
+       "      <td>0.615194</td>\n",
+       "      <td>1982.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2189</th>\n",
+       "      <td>Ordinary People</td>\n",
+       "      <td>Judith Guest</td>\n",
+       "      <td>[\"Children's literature\", 'Fiction', 'Psycholo...</td>\n",
+       "      <td>0.614048</td>\n",
+       "      <td>1976.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2568</th>\n",
+       "      <td>The Bourne Ultimatum</td>\n",
+       "      <td>Robert Ludlum</td>\n",
+       "      <td>['Thriller', 'Spy fiction', 'Fiction']</td>\n",
+       "      <td>0.613683</td>\n",
+       "      <td>1990.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Dracula</td>\n",
        "      <td>Bram Stoker</td>\n",
        "      <td>['Science Fiction', 'Speculative fiction', 'Ho...</td>\n",
-       "      <td>0.628905</td>\n",
+       "      <td>0.612396</td>\n",
+       "      <td>1979.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>2010: Odyssey Two</td>\n",
+       "      <td>Arthur C. Clarke</td>\n",
+       "      <td>['Science Fiction', 'Speculative fiction']</td>\n",
+       "      <td>0.611408</td>\n",
+       "      <td>1984.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       BookTitle               Author  \\\n",
-       "3103  The Fellowship of the Ring     J. R. R. Tolkien   \n",
-       "62     A Midsummer Night's Dream  William Shakespeare   \n",
-       "1939             The Winter King     Bernard Cornwell   \n",
-       "183            The Winter's Tale  William Shakespeare   \n",
-       "6                        Dracula          Bram Stoker   \n",
+       "                                      BookTitle             Author  \\\n",
+       "750                         The Lathe of Heaven  Ursula K. Le Guin   \n",
+       "2275                                Ghost Story       Peter Straub   \n",
+       "134                             Childhood's End   Arthur C. Clarke   \n",
+       "21                                   Microserfs   Douglas Coupland   \n",
+       "65                             The Forge of God          Greg Bear   \n",
+       "304   The Restaurant at the End of the Universe      Douglas Adams   \n",
+       "2189                            Ordinary People       Judith Guest   \n",
+       "2568                       The Bourne Ultimatum      Robert Ludlum   \n",
+       "6                                       Dracula        Bram Stoker   \n",
+       "52                            2010: Odyssey Two   Arthur C. Clarke   \n",
        "\n",
-       "                                             genre_list  cosine_similarity  \n",
-       "3103  ['Fantasy', 'Autobiography', 'Biography', 'Ref...           0.639165  \n",
-       "62                                ['Fantasy', 'Comedy']           0.637184  \n",
-       "1939  ['Speculative fiction', 'Fantasy', 'Fiction', ...           0.634384  \n",
-       "183                                                  []           0.632213  \n",
-       "6     ['Science Fiction', 'Speculative fiction', 'Ho...           0.628905  "
+       "                                             genre_list  cosine_similarity  \\\n",
+       "750   ['Science Fiction', 'Speculative fiction', 'Fa...           0.635565   \n",
+       "2275       ['Speculative fiction', 'Horror', 'Fiction']           0.628392   \n",
+       "134   ['Science Fiction', 'Speculative fiction', 'Ca...           0.626155   \n",
+       "21                      ['Epistolary novel', 'Fiction']           0.621337   \n",
+       "65    ['Science Fiction', 'Speculative fiction', 'Fi...           0.619180   \n",
+       "304   ['Science Fiction', 'Speculative fiction', 'Fi...           0.615194   \n",
+       "2189  [\"Children's literature\", 'Fiction', 'Psycholo...           0.614048   \n",
+       "2568             ['Thriller', 'Spy fiction', 'Fiction']           0.613683   \n",
+       "6     ['Science Fiction', 'Speculative fiction', 'Ho...           0.612396   \n",
+       "52           ['Science Fiction', 'Speculative fiction']           0.611408   \n",
+       "\n",
+       "      year_published  \n",
+       "750           1995.0  \n",
+       "2275          1979.0  \n",
+       "134           1987.0  \n",
+       "21            1995.0  \n",
+       "65            1993.0  \n",
+       "304           1982.0  \n",
+       "2189          1976.0  \n",
+       "2568          1990.0  \n",
+       "6             1979.0  \n",
+       "52            1984.0  "
       ]
      },
-     "execution_count": 580,
+     "execution_count": 654,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "df_results = genetic_pairing(df, 'Catch-22', 'The Hitchhiker\\'s Guide to the Galaxy', 'embed1', method='genetic', granularity=10, N=3194)\n",
+    "df_results[(df_results.num_ratings>5)][['BookTitle', 'Author', 'genre_list', 'cosine_similarity', 'year_published']].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df1833d0-f295-4070-a8c0-158edf348fa3",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df_results = genetic_pairing(df, 'The Lord of the Rings', 'Hamlet', 'embed1', method='genetic', granularity=100, N=3194)\n",
     "df_results[['BookTitle', 'Author', 'genre_list', 'cosine_similarity']].head()"
@@ -2237,8 +2335,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 662,
    "id": "581a5e90-a295-4908-8059-349204a3edc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Showed and discussed with Librarian\n",
+    "# Note: Maturity rating needed - augmentation with another model / toxicity type output (Clan of the Cave Bear is not a kids book!)\n",
+    "# given kid and one parent, who was the other parent? \"Who's my daddy\"\n",
+    "# Subject headings from worldcat? best / most comprehensive - or library of congress LCSH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c886858-eed1-48d8-bb89-032759225aa0",
    "metadata": {},
    "outputs": [],
    "source": []
